<resources>
    <string name="app_name">MoviesMobileApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sort">Sort</string>
    <string name="movies">Movies</string>
    <string name="poster">Poster</string>
    <string name="back">Back</string>
    <string name="_10">/10</string>
    <string name="add_to_watchlist">+ ADD TO WATCHLIST</string>
    <string name="remove_from_watchlist">REMOVE FROM WATCHLIST</string>
    <string name="watch_trailer">WATCH TRAILER</string>
    <string name="short_description">Short description</string>
    <string name="details">Details</string>
    <string name="genre">Genre</string>
    <string name="released_date">Released date</string>
    <string name="sort_by_name">Sort by Name</string>
    <string name="sort_by_date">Sort by Date</string>
</resources>