<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.description.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toBottomOf="@+id/bt_detail_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bt_detail_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:padding="0dp"
            android:text="@string/movies"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@android:color/white"
            app:layout_constraintStart_toEndOf="@+id/iv_icon"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlHardcoded" />

        <androidx.cardview.widget.CardView
            android:id="@+id/im_detail_poster_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bt_detail_back">

            <ImageView
                android:id="@+id/im_detail_poster"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:adjustViewBounds="true"
                tools:src="@drawable/im_avengers"
                android:contentDescription="@string/poster" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="25dp"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_detail_rating"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/im_detail_poster_card"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.07"
            tools:text="Tenet " />

        <TextView
            android:id="@+id/tv_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/textView"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_title"
            tools:text="7.8" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="15dp"
            android:text="@string/_10"
            android:textColor="@color/gray"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_detail_rating"
            app:layout_constraintEnd_toEndOf="parent"
            tools:ignore="RtlSymmetry" />

        <ToggleButton
            android:id="@+id/bt_detail_watchlist"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginVertical="30dp"
            android:background="@drawable/btn_toggle_background"
            android:paddingHorizontal="15dp"
            android:textColor="@color/gray"
            android:textOff="@string/add_to_watchlist"
            android:textOn="@string/remove_from_watchlist"
            android:textSize="11sp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_title" />

        <Button
            android:id="@+id/bt_detail_trailer"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginVertical="30dp"
            android:paddingHorizontal="30dp"
            android:text="@string/watch_trailer"
            android:textColor="@color/black"
            android:textSize="11sp"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="30dp"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_title"
            app:layout_constraintTop_toBottomOf="@+id/bt_detail_watchlist"
            app:strokeColor="@color/black"
            app:strokeWidth="2dp" />

        <TextView
            android:id="@+id/tv_detail_description_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/short_description"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/im_detail_poster_card"
            app:layout_constraintTop_toBottomOf="@+id/im_detail_poster_card" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingEnd="15dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_description_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description_name"
            tools:text="TextView"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_detail_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:text="@string/details"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_description" />

        <TextView
            android:id="@+id/tv_detail_genre_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/genre"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/tv_detail_date_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_details" />

        <TextView
            android:id="@+id/tv_detail_date_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/released_date"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_detail_details"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_genre_name" />

        <TextView
            android:id="@+id/tv_detail_genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_genre_name"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_genre_name"
            tools:text="TextView" />

        <TextView
            android:id="@+id/tv_detail_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="15dp"
            android:textColor="@color/gray"
            android:textSize="16sp"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toEndOf="@+id/tv_detail_date_name"
            app:layout_constraintTop_toTopOf="@+id/tv_detail_date_name"
            tools:text="TextView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>